syntax = "proto3";

package chat_v1;

option go_package = "GolandProjects/MicroservicesEducation/MyProject/auth/pkg/chat_v1;chat_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc ConnectChat(ConnectChatRequest) returns (stream Message);
}

message Chat {
  repeated string usernames = 1;
}

message CreateRequest {
  Chat chat = 1;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message Message {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message SendMessageRequest {
  int64 chat_id = 1;
  Message message = 2;
}

message ConnectChatRequest {
  int64 chat_id = 1;
  string username = 2;
}